--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.AboutActivity"></activity>
+        <activity android:name=".activity.EnterCodeActivity"></activity>
         <activity android:name=".activity.ScanResultActivity" />
         <activity android:name=".activity.HistoryMhsActivity" />
         <activity android:name=".activity.RekapActivity" />
