--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.stiki.mangab">
+    package="id.ac.stiki.doleno.mangab">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -16,30 +16,30 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.HelpActivity"></activity>
-        <activity android:name=".activity.EnterCodeActivity" />
-        <activity android:name=".activity.ScanResultActivity" />
-        <activity android:name=".activity.HistoryMhsActivity" />
-        <activity android:name=".activity.RekapActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.HelpActivity"></activity>
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.EnterCodeActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.ScanResultActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.HistoryMhsActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.RekapActivity" />
         <activity
-            android:name=".activity.ChangePasswordActivity"
+            android:name="id.ac.stiki.doleno.mangab.activity.ChangePasswordActivity"
             android:noHistory="true" />
-        <activity android:name=".activity.HistoryActivity" />
-        <activity android:name=".activity.SplashScreenActivity">
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.HistoryActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ResultActivity" />
-        <activity android:name=".activity.GenerateActivity" />
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.ScanActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.ResultActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.GenerateActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.MainActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.ScanActivity" />
         <activity
-            android:name=".activity.LoginActivity"
+            android:name="id.ac.stiki.doleno.mangab.activity.LoginActivity"
             android:noHistory="true" />
-        <activity android:name=".activity.AboutActivity" />
+        <activity android:name="id.ac.stiki.doleno.mangab.activity.AboutActivity" />
     </application>
 
 </manifest>
